<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layer_navi"
        android:paddingLeft="40dp"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingEnd="40dp"
        android:paddingBottom="10dp"
        android:text="@string/layer_navi"
        android:textColor="@color/blank"
        android:gravity="center"
        android:background="@drawable/map_layer_selector"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/menu_bg"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layer_night"
        android:paddingLeft="40dp"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingEnd="40dp"
        android:paddingBottom="10dp"
        android:text="@string/layer_night"
        android:textColor="@color/blank"
        android:gravity="center"
        android:background="@drawable/map_layer_selector"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/menu_bg"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layer_normal"
        android:paddingLeft="40dp"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingEnd="40dp"
        android:paddingBottom="10dp"
        android:text="@string/layer_normal"
        android:textColor="@color/blank"
        android:gravity="center"
        android:background="@drawable/map_layer_selector"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/menu_bg"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layer_satellite"
        android:paddingLeft="40dp"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingEnd="40dp"
        android:paddingBottom="10dp"
        android:text="@string/layer_satellite"
        android:textColor="@color/blank"
        android:gravity="center"
        android:background="@drawable/map_layer_selector"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/menu_bg"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layer_traffic"
        android:paddingLeft="40dp"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingEnd="40dp"
        android:paddingBottom="10dp"
        android:text="@string/layer_traffic"
        android:textColor="@color/blank"
        android:gravity="center"
        android:background="@drawable/map_layer_selector"
        />

</LinearLayout>